--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -27,5 +27,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - name: Copy application.properties
+      run: cp .config/application.properties src/main/resources/application.properties
     - name: Build with Maven
       run: mvn -B package --file pom.xml
